Apps now connect to DB using the utf8mb4 encoding instead of utf8

--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -4,6 +4,7 @@ default: &default
   password:   mysql
   host:       127.0.0.1
   reconnect:  true
+  encoding:   utf8mb4
 
 development:
   <<: *default
