--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -1,8 +1,8 @@
-name: spec
+name: rubocop
 on: push
 
 jobs:
-  spec:
+  rubocop:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,5 +15,5 @@ jobs:
           ruby-version: 3.1.4
           bundler-cache: true
 
-      - name: Run ruby tests
-        run: bundle exec rake spec
+      - name: Rubocop
+        run: bundle exec rubocop
