--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -15,5 +15,8 @@ jobs:
           ruby-version: 3.1.4
           bundler-cache: true
 
+      - name: Debugging
+        run: bundle exec rubocop -v
+
       - name: Rubocop
-        run: bundle exec rubocop
+        run: bundle exec rubocop -c .rubocop.yml
