--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,7 @@ AllCops:
     - "spec/dummy/**/*"
     - "script/**/*"
     - "db/**/*"
+    - 'vendor/bundle/**/*'
   DisabledByDefault: true
   StyleGuideBaseURL: https://shopify.github.io/ruby-style-guide/
 
