--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -15,9 +15,5 @@ jobs:
           ruby-version: 3.1.4
           bundler-cache: true
 
-      - name: Debugging
-        run: |
-          head .rubocop.yml
-
       - name: Rubocop
-        run: bundle exec rubocop -c .rubocop.yml
+        run: bundle exec rubocop
