Use sqlite3 for specs

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@ AllCops:
   Exclude:
     - "bin/**/*"
     - "script/**/*"
-    - "db/**/*"
+    - 'spec/dummy/db/*schema.rb'
     - 'vendor/bundle/**/*'
   DisabledByDefault: true
   StyleGuideBaseURL: https://shopify.github.io/ruby-style-guide/
