--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -15,5 +15,8 @@ jobs:
           ruby-version: 3.1.4
           bundler-cache: true
 
+      - name: Setup DB
+        run: bundle exec rake db:create && bundle exec rake db:schema:load
+
       - name: Run ruby tests
         run: bundle exec rake spec
