--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -19,4 +19,4 @@ jobs:
         run: bundle exec rake db:create && bundle exec rake db:schema:load
 
       - name: Run ruby tests
-        run: bundle exec rake spec
+        run: bundle exec rspec
